--- a/Heart/Base.lproj/Main.storyboard
+++ b/Heart/Base.lproj/Main.storyboard
@@ -18,16 +18,40 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Heart Rate Monitor " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EE0-Xi-dYL">
-                                <rect key="frame" x="185" y="64" width="230" height="33"/>
+                                <rect key="frame" x="185" y="40" width="230" height="33"/>
                                 <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="24"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LLg-WF-d12">
+                                <rect key="frame" x="271" y="560" width="59" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="GsS-r3-GCD"/>
+                                </constraints>
+                                <state key="normal" title="Connect">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="connectDisconnectAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="taG-yZ-xcB"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Connecting..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dsV-mf-XIb">
+                                <rect key="frame" x="249" y="370" width="102" height="24"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-UltraLight" family="Avenir Next" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w0y-M8-n08">
+                                <rect key="frame" x="300" y="229" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-UltraLight" family="Avenir Next" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rFz-jX-NYI">
-                                <rect key="frame" x="225" y="225" width="150" height="150"/>
+                                <rect key="frame" x="225" y="250" width="150" height="100"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 bpm" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.75000000000000022" translatesAutoresizingMaskIntoConstraints="NO" id="civ-x8-SQJ">
-                                        <rect key="frame" x="5" y="51" width="140" height="48"/>
+                                        <rect key="frame" x="5" y="26" width="140" height="48"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="35"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
@@ -35,7 +59,7 @@
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="150" id="4BO-AR-R8O"/>
+                                    <constraint firstAttribute="height" constant="100" id="4BO-AR-R8O"/>
                                     <constraint firstAttribute="trailing" secondItem="civ-x8-SQJ" secondAttribute="trailing" constant="5" id="6sb-Wr-qod"/>
                                     <constraint firstAttribute="centerX" secondItem="civ-x8-SQJ" secondAttribute="centerX" id="EPo-WS-X5T"/>
                                     <constraint firstAttribute="centerY" secondItem="civ-x8-SQJ" secondAttribute="centerY" id="K9J-rD-9EV"/>
@@ -48,44 +72,29 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LLg-WF-d12">
-                                <rect key="frame" x="271" y="540" width="59" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="GsS-r3-GCD"/>
-                                </constraints>
-                                <state key="normal" title="Connect">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="connectDisconnectAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="taG-yZ-xcB"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Connecting..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dsV-mf-XIb">
-                                <rect key="frame" x="249" y="395" width="102" height="24"/>
-                                <fontDescription key="fontDescription" name="AvenirNext-UltraLight" family="Avenir Next" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="LLg-WF-d12" firstAttribute="top" relation="greaterThanOrEqual" secondItem="dsV-mf-XIb" secondAttribute="bottom" id="0DH-bx-nCd"/>
                             <constraint firstItem="dsV-mf-XIb" firstAttribute="top" secondItem="rFz-jX-NYI" secondAttribute="bottom" constant="20" id="1t4-9r-uZN"/>
                             <constraint firstAttribute="centerX" secondItem="EE0-Xi-dYL" secondAttribute="centerX" id="KcW-bK-eoz"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="LLg-WF-d12" secondAttribute="bottom" constant="30" id="MKI-lg-hI4"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="LLg-WF-d12" secondAttribute="bottom" constant="10" id="MKI-lg-hI4"/>
                             <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="EE0-Xi-dYL" secondAttribute="trailing" constant="20" id="MsV-Py-6pg"/>
-                            <constraint firstItem="EE0-Xi-dYL" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" priority="750" constant="44" id="Mwu-Cw-vKO"/>
-                            <constraint firstItem="rFz-jX-NYI" firstAttribute="top" relation="greaterThanOrEqual" secondItem="EE0-Xi-dYL" secondAttribute="bottom" constant="50" id="O67-E7-W1c"/>
+                            <constraint firstItem="EE0-Xi-dYL" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="Mwu-Cw-vKO"/>
                             <constraint firstItem="EE0-Xi-dYL" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="Sd8-QV-YTd"/>
-                            <constraint firstItem="rFz-jX-NYI" firstAttribute="centerX" secondItem="dsV-mf-XIb" secondAttribute="centerX" constant="0.5" id="VBa-a3-9uM"/>
+                            <constraint firstItem="rFz-jX-NYI" firstAttribute="centerX" secondItem="dsV-mf-XIb" secondAttribute="centerX" id="VBa-a3-9uM"/>
+                            <constraint firstItem="w0y-M8-n08" firstAttribute="top" relation="greaterThanOrEqual" secondItem="EE0-Xi-dYL" secondAttribute="bottom" constant="10" id="brw-by-7iA"/>
                             <constraint firstItem="LLg-WF-d12" firstAttribute="centerX" secondItem="dsV-mf-XIb" secondAttribute="centerX" constant="0.5" id="ik5-mS-6VV"/>
+                            <constraint firstItem="rFz-jX-NYI" firstAttribute="top" secondItem="w0y-M8-n08" secondAttribute="bottom" priority="250" constant="21" id="jZN-8Z-Qgg"/>
                             <constraint firstItem="rFz-jX-NYI" firstAttribute="centerX" secondItem="EE0-Xi-dYL" secondAttribute="centerX" constant="0.5" id="kTB-T4-9pN"/>
+                            <constraint firstItem="EE0-Xi-dYL" firstAttribute="centerX" secondItem="w0y-M8-n08" secondAttribute="centerX" constant="-0.5" id="px7-VT-Fw2"/>
                             <constraint firstAttribute="centerY" secondItem="rFz-jX-NYI" secondAttribute="centerY" constant="0.5" id="r4w-Ar-Xju"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="connectDisconnectButton" destination="LLg-WF-d12" id="U6Z-vL-Vzz"/>
                         <outlet property="heartRateLabel" destination="civ-x8-SQJ" id="KKy-UE-E9d"/>
+                        <outlet property="sensorLocationLabel" destination="w0y-M8-n08" id="KZL-wU-gRE"/>
                         <outlet property="statusLabel" destination="dsV-mf-XIb" id="LV9-WD-CU7"/>
                     </connections>
                 </viewController>
